# Bachelor-Arbeit

./: .gitignore  CMakeLists.txt  compress.cpp  compress.hpp  compressV2.cpp  compressV2.hpp  main.cpp  suffix_array  suffix_array.cpp  suffix_array.hpp
apps/: CMakeLists.txt  main.cpp
benchmarking/: CMakeLists.txt  benchmark.cpp  benchmark.sh  input.txt
benchmarking/benchmark_results_20250723_142918/: benchmark_summary.txt
include/: compressV2.hpp  compressedSA.hpp  fastaParser.hpp  hashValue.hpp  suffix_array.hpp  test.hpp
oldVersion/: compress.cpp  compress.hpp
src/: CMakeLists.txt  compressV2.cpp  compressedSA.cpp  fastaParser.cpp  main.cpp  suffix_array.cpp  test.cpp
